# MBSlippi

./: .gitignore  Benchmarks.mbd  CMakeLists.txt  MBMeleeID.cpp  MBMeleeID.h  MBPM_FileInfoIgnore  MBPM_PacketInfo  MBSlippi.h  MBSlippiConfig.cpp  MBSlippiConfig.h  MBSlippiConfig.json  MBSlippiParsing.cpp  MBSlippiParsing.h  MBSlippiScript.cpp  MBSlippiScript.h  MBSlippiTest.cpp  MBSlippiTest.h  MBSlippiTypes.cpp  MBSlippiTypes.h  MBSlippi_CLI.cpp  MBSlippi_CLI.h  MBSlippi_CLIMain.cpp  MQL.cpp  MQL.h  MQL.mbbnf  MQLParser.cpp  MQLParser.h  MQL_LSP.cpp  MQL_LSP.h  MQL_LSPMain.cpp  MeleeID.cpp  MeleeID.h  README.mbd  README.md  SlippiGQP.mbspec  SlippiSpec.cpp  SlippiSpec.h  SlippiSpec.mbbnf  SlippiSpecLSP.cpp  SlippiSpecLSP.h  (+10 more)
Doc/: History.mbd  MBDocBuild.json  MBPM_PacketInfo  index.mbd
Doc/MQL/: Types.mbd  index.mbd
Doc/SlippiSpec/: index.mbd
ProjectDiary/: 2022-04-07.md  2022-04-08.md  2022-04-09.md  2022-04-10.md  2022-04-11.md  2022-04-13.md  2022-04-16.md  2022-04-17.md  2022-04-19.md  2022-07-12.mbd
VimPlugin/plugin/: Prompt.vim
mpv/: MBPM_PacketInfo  main.lua
